--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
         "@angular/router": "~8.2.0",
         "@fortawesome/fontawesome-free": "^5.13.0",
         "bootstrap": "^4.4.1",
+        "express": "^4.17.1",
         "jquery": "^3.4.1",
+        "path": "^0.12.7",
         "rxjs": "~6.4.0",
         "simple-line-icons": "^2.4.1",
         "tslib": "^1.10.0",
