--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
         "build": "ng build",
         "test": "ng test",
         "lint": "ng lint",
-        "e2e": "ng e2e"
+        "e2e": "ng e2e",
+        "lite": "lite-server",
+        "postinstall": "ng build --prod"
     },
     "private": true,
     "dependencies": {
@@ -49,5 +51,9 @@
         "ts-node": "~7.0.0",
         "tslint": "~5.15.0",
         "typescript": "~3.5.3"
+    },
+    "engines": {
+        "node": "10.14.2",
+        "npm": "6.4.1"
     }
 }
