--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "version": "0.0.0",
     "scripts": {
         "ng": "ng",
-        "start": "ng serve",
+        "start": "node server.js",
         "build": "ng build",
         "test": "ng test",
         "lint": "ng lint",
@@ -29,6 +29,7 @@
         "rxjs": "~6.4.0",
         "simple-line-icons": "^2.4.1",
         "tslib": "^1.10.0",
+        "ejs": "^2.5.6",
         "zone.js": "~0.9.1"
     },
     "devDependencies": {
@@ -53,7 +54,7 @@
         "typescript": "~3.5.3"
     },
     "engines": {
-        "node": "10.14.2",
+        "node": "12.x",
         "npm": "6.4.1"
     }
 }
