--- a/package.json
+++ b/package.json
@@ -29,7 +29,6 @@
         "rxjs": "~6.4.0",
         "simple-line-icons": "^2.4.1",
         "tslib": "^1.10.0",
-        "ejs": "^2.5.6",
         "zone.js": "~0.9.1"
     },
     "devDependencies": {
@@ -54,7 +53,7 @@
         "typescript": "~3.5.3"
     },
     "engines": {
-        "node": "12.x",
+        "node": "10.14.2",
         "npm": "6.4.1"
     }
 }
