--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
         "bootstrap": "^4.4.1",
         "express": "^4.17.1",
         "jquery": "^3.4.1",
+        "ngx-page-scroll": "^7.0.1",
+        "ngx-page-scroll-core": "^7.0.1",
         "path": "^0.12.7",
         "rxjs": "~6.4.0",
         "simple-line-icons": "^2.4.1",
