--- a/package.json
+++ b/package.json
@@ -23,12 +23,13 @@
         "@angular/platform-browser-dynamic": "~8.2.0",
         "@angular/router": "~8.2.0",
         "@fortawesome/fontawesome-free": "^5.13.0",
+        "angular-notifier": "^6.0.1",
         "bootstrap": "^4.4.1",
         "express": "^4.17.1",
         "jquery": "^3.4.1",
+        "ngx-bootstrap": "^5.6.1",
         "ngx-page-scroll": "^7.0.1",
         "ngx-page-scroll-core": "^7.0.1",
-        "ngx-bootstrap": "^5.6.1",
         "path": "^0.12.7",
         "rxjs": "~6.4.0",
         "simple-line-icons": "^2.4.1",
